--- a/approov-service/build.gradle
+++ b/approov-service/build.gradle
@@ -7,10 +7,7 @@ repositories {
     mavenCentral()
     google()
     jcenter()
-    maven { url "https://jitpack.io" }
 }
-
-group = 'com.github.approov'
 
 android {
     compileSdkVersion 30
@@ -35,18 +32,6 @@ android {
 dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'com.github.approov:approov-android-sdk:3.2.2'
+    implementation 'io.approov:approov-android-sdk:3.3.0'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.approov'
-                artifactId = 'approov-service-volley'
-                version = '3.2.2'
-            }
-        }
-    }
-}
