--- a/approov-service/pom.xml
+++ b/approov-service/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.approov</groupId>
   <artifactId>service.volley</artifactId>
-  <version>3.3.0</version>
+  <version>VERSION_PLACEHOLDER</version>
   <packaging>aar</packaging>
   <name>Approov enable volley interceptor</name>
     <description>Approov volley interceptor</description>
